--- a/network-backend/pom.xml
+++ b/network-backend/pom.xml
@@ -79,6 +79,19 @@
         </dependency>
 
         <dependency>
+            <groupId>org.glassfish.websocket</groupId>
+            <artifactId>websocket</artifactId>
+            <version>0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-reactor-netty</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
