--- a/network-backend/pom.xml
+++ b/network-backend/pom.xml
@@ -22,7 +22,7 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <dependency>
+        <dependency> <!--OVAJ DEPENDENCIE PRAVI PROBLEM KOD WEBSOCKETA-->
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
@@ -31,6 +31,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version> <!-- Use the appropriate version -->
+            <scope>provided</scope>
+        </dependency>
+
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
@@ -78,11 +86,12 @@
             <version>1.0.2</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.glassfish.websocket</groupId>
-            <artifactId>websocket</artifactId>
-            <version>0.2</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.glassfish.websocket</groupId>-->
+<!--            <artifactId>websocket</artifactId>-->
+<!--            <version>0.2</version>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
